[package]
name = "xeh"
version = "0.1.0"
authors = ["rivo <db05@bk.ru>"]
edition = "2018"

[features]
default = ["mmap", "stdio"]
# memory-mapped files
mmap = ["mapr"]
# print to console
stdio = ["rustyline"]

[dependencies]
rpds = "^0.11"
rustyline = { version = "6.1.2", optional = true }
getopts = "0.2"
getrandom = { version = "0.2.5", features = ["js"] }
twoway = "0.2.1"
arcstr = "1.1.3"

mapr = { version = "0.8", optional = true }

#[lib] # for lipo builds
#crate-type = ["staticlib"]
