[package]
name = "xeh"
version = "0.1.0"
authors = ["rivo <rsamoilov@naver.com>"]
edition = "2018"

[features]
default = ["mmap", "stdio", "calc_limit"]
# memory-mapped files
mmap = ["mapr"]
# print to console
stdio = ["rustyline", "rustyline-derive"]
calc_limit = []

[dependencies]
rpds = "^0.11"
rustyline = { version = "9.1.2", optional = true }
rustyline-derive = { version = "*", optional = true }
getopts = "0.2"
getrandom = { version = "0.2.5", features = ["js"] }
memchr = "2.5"
arcstr = "1.1.3"

mapr = { version = "0.8", optional = true }

#[lib] # for lipo builds
#crate-type = ["staticlib"]
