[package]
name = "xeh"
version = "0.1.0"
authors = ["rivo <rsamoilov@naver.com>"]
edition = "2018"

[features]
default = ["mmap", "stdio", "calc_limit"]
# memory-mapped files
mmap = ["mapr"]
# print to console
stdio = ["rustyline", "rustyline-derive", "getopts"]
calc_limit = []

[dependencies]
rpds = "0.12"
rustyline = { version = "9.1.2", optional = true }
rustyline-derive = { version = "0.7.0", optional = true }
getopts = { version = "0.2", optional = true }
getrandom = { version = "0.2.8", features = ["js"] }
memchr = "2.5"
arcstr = "1.1.4"

mapr = { version = "0.8", optional = true }

#[lib] # for lipo builds
#crate-type = ["staticlib"]
